syntax = "proto3";
package span.agent.v1;

import "google/protobuf/empty.proto";

service AgentService {
  rpc RegisterNode(NodeInfo) returns (NodeCredentials);
  rpc Heartbeat(NodeStatus) returns (google.protobuf.Empty);
  rpc GetDesiredState(NodeId) returns (DesiredState);
  rpc GetWireGuardConfig(NodeId) returns (WireGuardConfig);
}

message NodeInfo {
  string name = 1;
  string region = 2;
  map<string, string> labels = 3;
  string wg_pubkey = 4;
}

message NodeCredentials {
  string node_id = 1;
  bytes cert = 2;
  bytes key = 3;
  string wg_ip = 4;
}

message NodeStatus {
  string node_id = 1;
  string status = 2;
  map<string, string> metadata = 3;
}

message NodeId {
  string id = 1;
}

message DesiredState {
  repeated Container containers = 1;
}

message Container {
  string id = 1;
  string image = 2;
  map<string, string> env = 3;
}

message WireGuardConfig {
  // private_key is intentionally left empty by the control plane; agents use their local private key
  string private_key = 1;
  string address = 2;      // e.g., 10.99.1.5/16
  repeated Peer peers = 3;
}

message Peer {
  string public_key = 1;
  string endpoint = 2;     // public IP:port or empty
  repeated string allowed_ips = 3;
}
